KSENROLL-9250 SONAR Critical issue fix
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@55819 0ac02d80-fb3f-11dc-a574-c57244a850eb