@@ -178,7 +178,7 @@ public class MultiplicityGroup extends Composite {
         Widget itemWidget = createWidget();
 
 	    if (item != null){
-		    item.setItemKey(new Integer(itemCount -1));
+		    item.setItemKey(Integer.valueOf(itemCount -1));
 		    item.setItemWidget(itemWidget);
 		    item.setRemoveCallback(removeCallback);
 	    } else if (itemWidget instanceof MultiplicityGroupItem){
